# qcsfs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yaml
docs/: SPC.md  measure_screws.md  neural_network.md
src/qcsfs/: __init__.py
src/qcsfs/gui/: app.py  gui_utils.py
src/qcsfs/measure_screws/: measure.py
src/qcsfs/neural_network/: nn_config.yaml  nn_predicting.py  nn_training.py
src/qcsfs/spc/: spc_charts.py
tests/: __init__.py  test_measure_screws.py  test_neural_network.py  test_spc.py
