[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qcsfs"
version = "1.0.0"
description = "A Quality Control System For Screws (qcsfs), that checks the quality of screws using a neural network, classical image analysis methods and SPC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
  "Quality Control System",
  "Neural Network",
  "tensorflow",
  "MobileNetV2",
  "OpenCV",
  "PySimpleGUI",
  "SPC",
  "Statistical Process Control",
]
authors = [{ name = "Maokx1", email = "4mprog@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy==1.24.2",
  "opencv-python==4.7.0.72",
  "tensorflow==2.11.1",
  "matplotlib==3.7.1",
  "scikit-learn==1.2.2",
  "scipy==1.10.1",
  "imutils==0.5.4",
  "pandas==1.5.3",
  "PySimpleGUI==4.60.4",
  "Pillow>=10.3.0",
  "PyYAML==6.0.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/Maokx1/qcsfs"
documentation = "https://github.com/Maokx1/qcsfs/README.md"

[project.scripts]
qcsfs_create_folders = "qcsfs:create_folders"
qcsfs_create_yaml = "qcsfs:create_yaml"
